# rust_cli

./: .actrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  GIT_SETTINGS.md  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
fixtures/: blake3.txt  ed25519_private.key  ed25519_public.key  temp.b64
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
